<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@mipmap/login_activity_bg"
    tools:context=".app.main.bank.BankCommitSucceedActivity">

    <com.admin.control.topTitleBackBar.TopTitleBackBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerBackground="@color/tab_t_tab"
        app:headerLeftTitle="@string/back"
        app:headerRightImageVisibility="gone"
        app:headerTitle="@string/binding_title"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bd_committed"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:drawableLeft="@mipmap/promotion_level_up"
        android:drawablePadding="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/bd_committed_hint"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"/>

    <Button
        android:id="@+id/btn_known"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:padding="15dp"
        android:text="@string/known"
        android:textColor="@color/tab_t_tab"
        android:textSize="18sp"
        />
</LinearLayout>