<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@mipmap/login_activity_bg"
    tools:context=".app.activity_login_etc.LoginActivity">

    <com.admin.control.topTitleBackBar.TopTitleBackBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerBackground="@color/tab_t_tab"
        app:headerLeftTitle="@string/back"
        app:headerRightImageVisibility="gone"
        app:headerTitle="@string/regist_title"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_succeed"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:drawableLeft="@mipmap/promotion_level_up"
        android:drawablePadding="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/reg_succeed_next"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="15dp">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/tab_t_tab"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/reg_continue"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
    </LinearLayout>
</LinearLayout>