<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_activity_bg"
    tools:context=".app.main.my_promotion.MyPromotionActivity">
    <com.admin.control.topTitleBackBar.TopTitleBackBar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerBackground="@color/tab_t_tab"
        app:headerLeftTitle="@string/back"
        app:headerRightImageVisibility="gone"
        android:layout_alignParentTop="true"
        app:headerTitle="@string/my_promotion" />
    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:textColor="@color/tab_t_tab"
        android:textSize="12sp"
        android:text="@string/my_promotion_warning"/>
    <TextView
        android:id="@+id/tv_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:padding="15dp"
        android:singleLine="true"
        tools:text="@string/my_promotion_hint" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_numbers"
        android:layout_above="@id/tv_hint"
        android:padding="10dp"
        tools:listitem="@layout/item_promotion_details"/>
</RelativeLayout>